--- a/Module1/lab9/main_lab9.ipynb
+++ b/Module1/lab9/main_lab9.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
      "output_type": "stream",
      "text": [
       "enter a password here: Rac56\n",
-      "Password is not valid, please enter a valid password: Rachad@89\n",
+      "Password is not valid, please enter a valid password: Rachad96@\n",
       "Password is valid\n"
      ]
     }
@@ -128,6 +128,8 @@
     "password = input('enter a password here: ')\n",
     "criteria_password = [re.search(\"[A-Z]\", password), re.search(\"[a-z]\", password), re.search(\"[0-9]\", password), re.search(\"[$#@]\", password), len(password)<16, len(password)>6]\n",
     "\n",
+    "for cond in criteria_password:\n",
+    "    cond = cond\n",
     "while cond in criteria_password:\n",
     "    if cond == False or cond == None:\n",
     "        input(\"Password is not valid, please enter a valid password: \")\n",
