--- a/Module1/lab13/lab13.ipynb
+++ b/Module1/lab13/lab13.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c0a16dac",
+   "id": "6d858eac",
    "metadata": {},
    "source": [
     "## Challenge 1 : Get a Picture"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9d36d7ca",
+   "id": "868d6271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2ce2f5b1",
+   "id": "762b18e6",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "eccf05ef",
+   "id": "82aab2e8",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a435f70e",
+   "id": "2c28caa1",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d80a541d",
+   "id": "03a9266c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,8 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "f1e19e79",
+   "execution_count": 107,
+   "id": "1d18765f",
    "metadata": {},
    "outputs": [
     {
@@ -120,27 +120,28 @@
     "#6. Get it via API\n",
     "from PIL import Image\n",
     "import requests\n",
-    "im = Image.open(requests.get('https://imgs.xkcd.com/comics/christmas_back_home.png', stream=True).raw)\n",
+    "response = requests.get('https://imgs.xkcd.com/comics/christmas_back_home.png', stream=True)\n",
+    "im = Image.open(response.raw)\n",
     "display(im)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "8f33d356",
+   "execution_count": 109,
+   "id": "363e22bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "#7. Save it to your computer\n",
-    "response = requests.get('https://imgs.xkcd.com/comics/christmas_back_home.png')\n",
-    "img_data = response.content\n",
-    "with open('Lab_13_image.png', 'wb') as handler:\n",
-    "    handler.write(img_data)"
+    "#response = requests.get('https://imgs.xkcd.com/comics/christmas_back_home.png')\n",
+    "im_data = response.content\n",
+    "with open('Lab13_picture.png', 'wb') as f:\n",
+    "    f.write(im_data)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c36ca23f",
+   "id": "5b590529",
    "metadata": {},
    "source": [
     "## Challenge2 : Get a password"
@@ -149,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e555e157",
+   "id": "60277ba9",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "44a89b42",
+   "id": "a72b0f30",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b11b5ae2",
+   "id": "c81f1d90",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3dcfac8b",
+   "id": "5df532ca",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4de4168e",
+   "id": "4cc325dc",
    "metadata": {},
    "source": [
     "## Challenge 3: Hidden Cold Joke"
@@ -271,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8eb7bff2",
+   "id": "e4cc463a",
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "afb2c286",
+   "id": "beb0a866",
    "metadata": {},
    "outputs": [
     {
@@ -2024,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "b276c957",
+   "id": "c7fd7182",
    "metadata": {},
    "outputs": [
     {
@@ -2070,7 +2071,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "c0fcca7f",
+   "id": "4f9ac3c0",
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2116,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "8d2c6bcf",
+   "id": "393c588b",
    "metadata": {},
    "outputs": [
     {
@@ -2160,7 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "75e5bd2f",
+   "id": "1c4d3545",
    "metadata": {},
    "outputs": [
     {
@@ -2206,7 +2207,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "f9a01542",
+   "id": "ff5bcc69",
    "metadata": {},
    "outputs": [
     {
