--- a/Module1/lab13/lab13.ipynb
+++ b/Module1/lab13/lab13.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "60277ba9",
    "metadata": {},
    "outputs": [
@@ -159,20 +159,21 @@
        "'https://httpbin.org/get'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#2. import requests\n",
+    "#2. \n",
+    "import requests\n",
     "response = requests.get('https://httpbin.org/get')\n",
     "response.url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "a72b0f30",
    "metadata": {},
    "outputs": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "c81f1d90",
    "metadata": {},
    "outputs": [
@@ -205,12 +206,12 @@
        "  'Accept-Encoding': 'gzip, deflate, br',\n",
        "  'Host': 'httpbin.org',\n",
        "  'User-Agent': 'python-requests/2.28.1',\n",
-       "  'X-Amzn-Trace-Id': 'Root=1-63d13e0a-21c95dec2fe7b14c00ef9df3'},\n",
+       "  'X-Amzn-Trace-Id': 'Root=1-63d23b2d-7192c9016461902055761c6f'},\n",
        " 'origin': '185.146.221.98',\n",
        " 'url': 'https://httpbin.org/get?username=u&password=p'}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "5df532ca",
    "metadata": {},
    "outputs": [
@@ -242,13 +243,13 @@
        "  'Content-Type': 'application/x-www-form-urlencoded',\n",
        "  'Host': 'httpbin.org',\n",
        "  'User-Agent': 'python-requests/2.28.1',\n",
-       "  'X-Amzn-Trace-Id': 'Root=1-63d1409f-0bb8b65f5398048f7d91c5bf'},\n",
+       "  'X-Amzn-Trace-Id': 'Root=1-63d23b32-0134e43424608d8213b38446'},\n",
        " 'json': None,\n",
        " 'origin': '185.146.221.98',\n",
        " 'url': 'https://httpbin.org/post'}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,6 +268,17 @@
    "metadata": {},
    "source": [
     "## Challenge 3: Hidden Cold Joke"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a1bc9d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##PS: In the begening we created token on github and send it via terminal. This allowed us to access the gituhb ? \n",
+    "#curl --insecure -u rnasr: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 https://api.github.com/user"
    ]
   },
   {
@@ -1970,6 +1982,7 @@
    "source": [
     "#search for these files by calling the Github API\n",
     "response = requests.get('https://api.github.com/search/code?q=.scavengerhunt+in:path+repo:ironhack-datalabs/scavenger')\n",
+    "#https://docs.gthub.com/en/rest/reference/search#search-code: specify where to search .scavengerhunt IN THE path+repo:ironhack_data....\n",
     "search = response.json()\n",
     "search"
    ]
@@ -2064,7 +2077,7 @@
    ],
    "source": [
     "#2. Read the content of each secret files into an array of strings.\n",
-    "repo_files_urls = {item[\"name\"]: item[\"url\"] for item in search[\"items\"]}\n",
+    "repo_files_urls = {item[\"name\"]: item[\"url\"] for item in search[\"items\"]} #we need the urls because we need to requested after\n",
     "repo_files_urls"
    ]
   },
@@ -2109,7 +2122,7 @@
     }
    ],
    "source": [
-    "repo_files = [requests.get(repo_files_urls[repo_filename]) for repo_filename in repo_files_names]\n",
+    "repo_files = [requests.get(repo_files_urls[repo_filename]) for repo_filename in repo_files_names] #for each file name take url and create request\n",
     "repo_files"
    ]
   },
@@ -2154,7 +2167,7 @@
     }
    ],
    "source": [
-    "repo_files_content = [file.json()[\"content\"] for file in repo_files]\n",
+    "repo_files_content = [file.json()[\"content\"] for file in repo_files] #I need to take only content (text inside) not the other elements\n",
     "repo_files_content"
    ]
   },
@@ -2199,7 +2212,7 @@
     }
    ],
    "source": [
-    "import base64\n",
+    "import base64 #allow de decode the messages \n",
     "message = [base64.b64decode(b64message).decode('ascii') for b64message in repo_files_content]\n",
     "message"
    ]
