--- a/Module1/lab27/lab27.ipynb
+++ b/Module1/lab27/lab27.ipynb
@@ -407,7 +407,7 @@
    "source": [
     "# your code here\n",
     "my_df = pd.DataFrame(b,\n",
-    "                    columns = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5'])\n",
+    "                    columns = colnames)\n",
     "my_df"
    ]
   },
