--- a/Module1/lab28/lab28.ipynb
+++ b/Module1/lab28/lab28.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here\n",
+    "import pandas as pd\n",
+    "shuttle = pd.read_csv(tst_url, sep = \" \",\n",
+    "                     names = cols)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's verify that this worked by looking at the `head()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -374,81 +393,8 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>0</td>\n",
-       "      <td>84</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-36</td>\n",
-       "      <td>-29</td>\n",
-       "      <td>4</td>\n",
-       "      <td>120</td>\n",
-       "      <td>116</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>0</td>\n",
-       "      <td>81</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-20</td>\n",
-       "      <td>25</td>\n",
-       "      <td>26</td>\n",
-       "      <td>102</td>\n",
-       "      <td>76</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>0</td>\n",
-       "      <td>77</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>-22</td>\n",
-       "      <td>22</td>\n",
-       "      <td>65</td>\n",
-       "      <td>42</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>0</td>\n",
-       "      <td>103</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>-16</td>\n",
-       "      <td>66</td>\n",
-       "      <td>85</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>2</td>\n",
-       "      <td>98</td>\n",
-       "      <td>0</td>\n",
-       "      <td>52</td>\n",
-       "      <td>1</td>\n",
-       "      <td>42</td>\n",
-       "      <td>46</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>14500 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -458,93 +404,23 @@
        "50    -1        89         -7        50     0      39         40         2   \n",
        "53     9        79          0        42    -2      25         37        12   \n",
        "55     2        82          0        54    -6      26         28         2   \n",
-       "..   ...       ...        ...       ...   ...     ...        ...       ...   \n",
-       "80     0        84          0       -36   -29       4        120       116   \n",
-       "55     0        81          0       -20    25      26        102        76   \n",
-       "55     0        77          0        12   -22      22         65        42   \n",
-       "37     0       103          0        18   -16      66         85        20   \n",
-       "56     2        98          0        52     1      42         46         4   \n",
        "\n",
        "    class  \n",
        "55      4  \n",
        "56      4  \n",
        "50      1  \n",
        "53      4  \n",
-       "55      1  \n",
-       "..    ...  \n",
-       "80      5  \n",
-       "55      4  \n",
-       "55      4  \n",
-       "37      1  \n",
-       "56      4  \n",
-       "\n",
-       "[14500 rows x 9 columns]"
+       "55      1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here\n",
-    "import pandas as pd\n",
-    "shuttle = pd.read_csv(tst_url, sep = \" \",\n",
-    "                     names = cols)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's verify that this worked by looking at the `head()` function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.head of     time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
-       "55     0        81          0        -6    11      25         88        64   \n",
-       "56     0        96          0        52    -4      40         44         4   \n",
-       "50    -1        89         -7        50     0      39         40         2   \n",
-       "53     9        79          0        42    -2      25         37        12   \n",
-       "55     2        82          0        54    -6      26         28         2   \n",
-       "..   ...       ...        ...       ...   ...     ...        ...       ...   \n",
-       "80     0        84          0       -36   -29       4        120       116   \n",
-       "55     0        81          0       -20    25      26        102        76   \n",
-       "55     0        77          0        12   -22      22         65        42   \n",
-       "37     0       103          0        18   -16      66         85        20   \n",
-       "56     2        98          0        52     1      42         46         4   \n",
-       "\n",
-       "    class  \n",
-       "55      4  \n",
-       "56      4  \n",
-       "50      1  \n",
-       "53      4  \n",
-       "55      1  \n",
-       "..    ...  \n",
-       "80      5  \n",
-       "55      4  \n",
-       "55      4  \n",
-       "37      1  \n",
-       "56      4  \n",
-       "\n",
-       "[14500 rows x 9 columns]>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# your code here\n",
-    "shuttle.head"
+    "shuttle.head()"
    ]
   },
   {
