--- a/Module1/lab24/lab24.ipynb
+++ b/Module1/lab24/lab24.ipynb
@@ -58,49 +58,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[0.11505457, 0.60906654, 0.13339096, 0.24058962, 0.32713906],\n",
-       "        [0.85913749, 0.66609021, 0.54116221, 0.02901382, 0.7337483 ],\n",
-       "        [0.39495002, 0.80204712, 0.25442113, 0.05688494, 0.86664864]],\n",
-       "\n",
-       "       [[0.221029  , 0.40498945, 0.31609647, 0.0766627 , 0.84322469],\n",
-       "        [0.84893915, 0.97146509, 0.38537691, 0.95448813, 0.44575836],\n",
-       "        [0.66972465, 0.08250005, 0.89709858, 0.2980035 , 0.26230482]]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Method 1\n",
     "np.random.seed(43)\n",
-    "a = np.random.random((2,3,5))\n",
-    "a"
+    "a = np.random.random((2,3,5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Method 2"
+    "# Method 2\n",
+    "np.random.seed(43)\n",
+    "a = np.random.randn(2,3,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Method 3"
+    "# Method 3\n",
+    "np.random.seed(43)\n",
+    "a = np.random.rand(2,3,5)"
    ]
   },
   {
@@ -112,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +113,7 @@
        "        [0.66972465, 0.08250005, 0.89709858, 0.2980035 , 0.26230482]]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,12 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# your code here\n",
-    "b = np.zeros((5,2,3))"
+    "b = np.ones((5,2,3))"
    ]
   },
   {
@@ -163,29 +149,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0., 0., 0.],\n",
-       "        [0., 0., 0.]],\n",
+       "array([[[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
        "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.]],\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
        "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.]],\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
        "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.]],\n",
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]],\n",
        "\n",
-       "       [[0., 0., 0.],\n",
-       "        [0., 0., 0.]]])"
+       "       [[1., 1., 1.],\n",
+       "        [1., 1., 1.]]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +203,7 @@
    ],
    "source": [
     "# your code here\n",
-    "if a.all() == b.all():\n",
+    "if a.shape == b.shape:\n",
     "    print (\"True\")\n",
     "else: \n",
     "    print (\"False\")"
@@ -262,26 +248,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "_reshape_dispatcher() missing 1 required positional argument: 'newshape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11528\\4081314459.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# your code here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mreshape\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: _reshape_dispatcher() missing 1 required positional argument: 'newshape'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here\n",
-    "c = b.T\n",
-    "c = np.reshape((2,3,5))"
+    "c = b.reshape((2,3,5))\n",
+    "c"
    ]
   },
   {
@@ -293,24 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (2,3,5) (3,2,5) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11528\\1973952632.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# your code/answer here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (3,2,5) "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# your code/answer here\n",
-    "d = a + c "
+    "d = a + c \n",
+    "#both a and c have the same size "
    ]
   },
   {
@@ -322,11 +301,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a: \n",
+      " [[[0.11505457 0.60906654 0.13339096 0.24058962 0.32713906]\n",
+      "  [0.85913749 0.66609021 0.54116221 0.02901382 0.7337483 ]\n",
+      "  [0.39495002 0.80204712 0.25442113 0.05688494 0.86664864]]\n",
+      "\n",
+      " [[0.221029   0.40498945 0.31609647 0.0766627  0.84322469]\n",
+      "  [0.84893915 0.97146509 0.38537691 0.95448813 0.44575836]\n",
+      "  [0.66972465 0.08250005 0.89709858 0.2980035  0.26230482]]]\n",
+      "\n",
+      "this is d: \n",
+      " [[[1.11505457 1.60906654 1.13339096 1.24058962 1.32713906]\n",
+      "  [1.85913749 1.66609021 1.54116221 1.02901382 1.7337483 ]\n",
+      "  [1.39495002 1.80204712 1.25442113 1.05688494 1.86664864]]\n",
+      "\n",
+      " [[1.221029   1.40498945 1.31609647 1.0766627  1.84322469]\n",
+      "  [1.84893915 1.97146509 1.38537691 1.95448813 1.44575836]\n",
+      "  [1.66972465 1.08250005 1.89709858 1.2980035  1.26230482]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "print('this is a: \\n', a)\n",
+    "print('')\n",
+    "print('this is d: \\n', d)\n",
+    "\n",
+    "# we can notice the values in d are the values in a + 1 "
    ]
   },
   {
@@ -338,11 +346,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "e = a*c"
    ]
   },
   {
@@ -354,11 +363,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True]]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code/answer here"
+    "# your code/answer here\n",
+    "e == a\n",
+    "# e is equal a because a is multiplied with 1 so it generates the same result as a"
    ]
   },
   {
@@ -370,11 +398,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max is : \n",
+      " 1.971465091435388\n",
+      "min is : \n",
+      " 1.0290138244243603\n",
+      "mean is : \n",
+      " 1.476900205884057\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "d_max = np.max(d) \n",
+    "print('max is : \\n', d_max)\n",
+    "d_min = np.min(d) \n",
+    "print('min is : \\n', d_min)\n",
+    "d_mean = np.mean(d)\n",
+    "print('mean is : \\n', d_mean)\n",
+    "\n"
    ]
   },
   {
@@ -386,11 +434,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.11505457, 1.60906654, 1.13339096, 1.24058962, 1.32713906],\n",
+       "        [1.85913749, 1.66609021, 1.54116221, 1.02901382, 1.7337483 ],\n",
+       "        [1.39495002, 1.80204712, 1.25442113, 1.05688494, 1.86664864]],\n",
+       "\n",
+       "       [[1.221029  , 1.40498945, 1.31609647, 1.0766627 , 1.84322469],\n",
+       "        [1.84893915, 1.97146509, 1.38537691, 1.95448813, 1.44575836],\n",
+       "        [1.66972465, 1.08250005, 1.89709858, 1.2980035 , 1.26230482]]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "f = np.empty(shape=(2,3,5))\n",
+    "f"
    ]
   },
   {
@@ -406,11 +473,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "f[np.where((d_min<d) & (d<d_mean))] = 25\n",
+    "f[np.where((d_mean<d) & (d<d_max))] = 75\n",
+    "f[np.where(d==d_mean)] = 50\n",
+    "f[np.where(d==d_min)] = 0\n",
+    "f[np.where(d==d_max)] = 100\n",
+    "\n"
    ]
   },
   {
@@ -440,11 +514,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d is \n",
+      "\n",
+      ":  [[[1.11505457 1.60906654 1.13339096 1.24058962 1.32713906]\n",
+      "  [1.85913749 1.66609021 1.54116221 1.02901382 1.7337483 ]\n",
+      "  [1.39495002 1.80204712 1.25442113 1.05688494 1.86664864]]\n",
+      "\n",
+      " [[1.221029   1.40498945 1.31609647 1.0766627  1.84322469]\n",
+      "  [1.84893915 1.97146509 1.38537691 1.95448813 1.44575836]\n",
+      "  [1.66972465 1.08250005 1.89709858 1.2980035  1.26230482]]]\n",
+      "\n",
+      "f is  \n",
+      "\n",
+      ":  [[[ 25.  75.  25.  25.  25.]\n",
+      "  [ 75.  75.  75.   0.  75.]\n",
+      "  [ 25.  75.  25.  25.  75.]]\n",
+      "\n",
+      " [[ 25.  25.  25.  25.  75.]\n",
+      "  [ 75. 100.  25.  75.  25.]\n",
+      "  [ 75.  25.  75.  25.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print('d is \\n\\n: ', d)\n",
+    "print('')\n",
+    "print('f is  \\n\\n: ', f)"
    ]
   },
   {
@@ -470,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n"
    ]
   }
  ],
