--- a/Module1/lab29/challenge-1.ipynb
+++ b/Module1/lab29/challenge-1.ipynb
@@ -344,120 +344,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Type 2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Fire</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>795</th>\n",
-       "      <td>Rock</td>\n",
-       "      <td>Fairy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>796</th>\n",
-       "      <td>Rock</td>\n",
-       "      <td>Fairy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>797</th>\n",
-       "      <td>Psychic</td>\n",
-       "      <td>Ghost</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>798</th>\n",
-       "      <td>Psychic</td>\n",
-       "      <td>Dark</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>799</th>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Water</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>800 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      Type 1  Type 2\n",
-       "0      Grass  Poison\n",
-       "1      Grass  Poison\n",
-       "2      Grass  Poison\n",
-       "3      Grass  Poison\n",
-       "4       Fire     NaN\n",
-       "..       ...     ...\n",
-       "795     Rock   Fairy\n",
-       "796     Rock   Fairy\n",
-       "797  Psychic   Ghost\n",
-       "798  Psychic    Dark\n",
-       "799     Fire   Water\n",
-       "\n",
-       "[800 rows x 2 columns]"
+       "array(['Grass', 'Fire', 'Water', 'Bug', 'Normal', 'Poison', 'Electric',\n",
+       "       'Ground', 'Fairy', 'Fighting', 'Psychic', 'Rock', 'Ghost', 'Ice',\n",
+       "       'Dragon', 'Dark', 'Steel', 'Flying', nan], dtype=object)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here\n",
-    "extract = pokemon[[\"Type 1\", \"Type 2\"]]\n",
+    "#extract = pokemon[[\"Type 1\", \"Type 2\"]] #(unique)\n",
+    "\n",
+    "\n",
+    "extract = (pokemon['Type 1'].append(pokemon['Type 2'])).unique()\n",
+    "#extract = pd.unique(pokemon[['Type 1', 'Type 2']].values.ravel('K'))\n",
     "extract"
    ]
   },
@@ -477,7 +386,8 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "pokemon['Name'] = pokemon['Name'].str.replace(r'[A-Z]+[a-z]+Mega', 'Mega', regex = True)"
+    "pokemon['Name'] = pokemon['Name'].str.replace(r'[A-Z]+[a-z]+Mega', 'Mega', regex = True)\n",
+    "#other possibility: df['Name']=df['Name'].str.replace(r'(.*)Mega ', 'Mega ')"
    ]
   },
   {
@@ -1551,7 +1461,8 @@
    ],
    "source": [
     "# your code here\n",
-    "pokemon_top5 = pokemon.sort_values('A/D Ratio',ascending = False).head(5)\n",
+    "pokemon_top5 = pokemon.sort_values(['A/D Ratio'],ascending = False).head(5)\n",
+    "#other function coud be used: top5p = pokemons.nlargest(5, columns='A/D Ratio')\n",
     "print (pokemon_top5)"
    ]
   },
