--- a/Module1/lab29/challenge-3.ipynb
+++ b/Module1/lab29/challenge-3.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,160 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>InvoiceNo</th>\n",
-       "      <th>StockCode</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>InvoiceDate</th>\n",
-       "      <th>UnitPrice</th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>amount_spent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>536365</td>\n",
-       "      <td>85123A</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>white hanging heart t-light holder</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>17850</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>15.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>536365</td>\n",
-       "      <td>71053</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>white metal lantern</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>17850</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>20.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>536365</td>\n",
-       "      <td>84406B</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>cream cupid hearts coat hanger</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>17850</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>22.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>536365</td>\n",
-       "      <td>84029G</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>knitted union flag hot water bottle</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>17850</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>20.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>536365</td>\n",
-       "      <td>84029E</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>red woolly hottie white heart.</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>17850</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>20.34</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
-       "0           0     536365    85123A  2010     12    3     8   \n",
-       "1           1     536365     71053  2010     12    3     8   \n",
-       "2           2     536365    84406B  2010     12    3     8   \n",
-       "3           3     536365    84029G  2010     12    3     8   \n",
-       "4           4     536365    84029E  2010     12    3     8   \n",
-       "\n",
-       "                           Description  Quantity          InvoiceDate  \\\n",
-       "0   white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
-       "1                  white metal lantern         6  2010-12-01 08:26:00   \n",
-       "2       cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
-       "3  knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
-       "4       red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
-       "\n",
-       "   UnitPrice  CustomerID         Country  amount_spent  \n",
-       "0       2.55       17850  United Kingdom         15.30  \n",
-       "1       3.39       17850  United Kingdom         20.34  \n",
-       "2       2.75       17850  United Kingdom         22.00  \n",
-       "3       3.39       17850  United Kingdom         20.34  \n",
-       "4       3.39       17850  United Kingdom         20.34  "
+       "397924"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +71,8 @@
    "source": [
     "# your code here\n",
     "orders = pd.read_csv(\"Orders.csv\", index_col = None)\n",
-    "orders.head()"
+    "orders.head()\n",
+    "len(orders)"
    ]
   },
   {
@@ -248,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +211,7 @@
        "[4339 rows x 2 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,12 +227,14 @@
     "amount_customer = pd.DataFrame(orders.groupby([\"CustomerID\"])[\"amount_spent\"].sum())\n",
     "amount_customer=amount_customer.reset_index() \n",
     "amount_customer.columns =['CustomerID', 'Total_amount']\n",
-    "amount_customer"
+    "amount_customer\n",
+    "\n",
+    "#Baudoin: customers = orders.groupby(['CustomerID'])['amount_spent'].sum().to_frame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +352,7 @@
        "[4339 rows x 3 columns]"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,191 +369,29 @@
     "        amount_customer[\"Total_amount\"] , bins=[Min, q1, q2, Max],\n",
     "        labels=['normal', 'preferred', 'vip'], include_lowest=True)\n",
     ")\n",
-    "amount_customer"
+    "amount_customer\n",
+    "#Kaci: bins = pd.qcut(unique_custom['amount_spent'], q=[0, .5, .75, .95, 1], labels=['First', 'Second', 'Preffered', 'VIP'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>InvoiceNo</th>\n",
-       "      <th>StockCode</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>InvoiceDate</th>\n",
-       "      <th>UnitPrice</th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>amount_spent</th>\n",
-       "      <th>Total_amount</th>\n",
-       "      <th>Quantile</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>536365</td>\n",
-       "      <td>85123A</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>white hanging heart t-light holder</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>17850</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>15.30</td>\n",
-       "      <td>5391.21</td>\n",
-       "      <td>preferred</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>536365</td>\n",
-       "      <td>71053</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>white metal lantern</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>17850</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>20.34</td>\n",
-       "      <td>5391.21</td>\n",
-       "      <td>preferred</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>536365</td>\n",
-       "      <td>84406B</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>cream cupid hearts coat hanger</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>17850</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>22.00</td>\n",
-       "      <td>5391.21</td>\n",
-       "      <td>preferred</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>536365</td>\n",
-       "      <td>84029G</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>knitted union flag hot water bottle</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>17850</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>20.34</td>\n",
-       "      <td>5391.21</td>\n",
-       "      <td>preferred</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>536365</td>\n",
-       "      <td>84029E</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>red woolly hottie white heart.</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>17850</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>20.34</td>\n",
-       "      <td>5391.21</td>\n",
-       "      <td>preferred</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
-       "0           0     536365    85123A  2010     12    3     8   \n",
-       "1           1     536365     71053  2010     12    3     8   \n",
-       "2           2     536365    84406B  2010     12    3     8   \n",
-       "3           3     536365    84029G  2010     12    3     8   \n",
-       "4           4     536365    84029E  2010     12    3     8   \n",
-       "\n",
-       "                           Description  Quantity          InvoiceDate  \\\n",
-       "0   white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
-       "1                  white metal lantern         6  2010-12-01 08:26:00   \n",
-       "2       cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
-       "3  knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
-       "4       red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
-       "\n",
-       "   UnitPrice  CustomerID         Country  amount_spent  Total_amount  \\\n",
-       "0       2.55       17850  United Kingdom         15.30       5391.21   \n",
-       "1       3.39       17850  United Kingdom         20.34       5391.21   \n",
-       "2       2.75       17850  United Kingdom         22.00       5391.21   \n",
-       "3       3.39       17850  United Kingdom         20.34       5391.21   \n",
-       "4       3.39       17850  United Kingdom         20.34       5391.21   \n",
-       "\n",
-       "    Quantile  \n",
-       "0  preferred  \n",
-       "1  preferred  \n",
-       "2  preferred  \n",
-       "3  preferred  \n",
-       "4  preferred  "
+       "397924"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "orders_merge = orders.merge(amount_customer, how='left', on=['CustomerID'])\n",
-    "orders_merge.head(5)"
+    "orders_merge = orders.merge(amount_customer, how='inner', on=['CustomerID'])\n",
+    "len(orders_merge)\n"
    ]
   },
   {
@@ -708,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +763,7 @@
        "United Kingdom  preferred         0"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +894,7 @@
        "[81 rows x 1 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1084,7 @@
        "Greece                 32"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
